--- a/demo/style.css
+++ b/demo/style.css
@@ -1,29 +1,277 @@
-body {
-    padding-top: 40px;
-    padding-right: 40px;
-    padding-left: 40px;
-    margin:0; 
-    background-color: azure; 
-    font-family: "Tahoma"; 
+body{
+    background-color: #efbdd8;
+}
+.header{
+    padding:50px;
+    font-family: palatino;
+    text-align: center;
+    background-image: linear-gradient(to bottom right, #6f3755, #e977af);
+    color: white;
+    font-size: 55px;
+    border-style: outset;
+    border-width: 5px;
+    border-color: #84556b;
+    text-shadow: 2px 2px 5px black;
 }
 
-#project1 {
-    width=20%;
-}
-#one{
-    color:darkslateblue;
-    font-size: 30px;
+h1{font-family: arial black;
     text-align: center;
+    color:deepskyblue;
+    font-size: 50px;
+    text-shadow: 2px 2px 5px black;
 }
-#two{
-    color:blueviolet;
+
+h2{font-family: arial;
+    text-align:justify;
+    color:white;
+    font-size: 20px;
+}
+
+.image{
+    height: 465px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+/*NAVBAR~~~~~*/
+.navbar{
+    overflow: hidden;
+    background-color: #9d6160;
+    border-style: outset;
+    border-color: #ac7976;
+    font-family: helvetica;
+    font-variant:small-caps;
+    text-shadow: 2px 2px 5px black;
+}
+.navbar a{
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+.navbar a.right{
+    float: right;
+}
+
+.navbar a:hover{
+    background-color: #ddd;
+    color: black;
+}
+/*NAVBAR*/
+
+/*CONTENT~~~~~*/
+*{box-sizing: border-box;}
+
+/*column container*/
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+/*sidebar*/
+.side{
+    flex: 30%; /*sidebar width*/
+    background-color: #e977af;
+    border-style: outset;
+    border-color: #ec91bd;
+    padding: 50px;
+    overflow: auto;
+}
+/*sidebar*/
+
+/*Main column~~~~*/
+.main{
+    overflow:auto;
+    flex:70%;
+    background-color: #efbdd8;
+    padding: 20px;
+    align-content: justify;
+}
+/*main column*/
+
+/*SCROLL*/
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #846f79; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #6f3755; 
+}
+/*SCROLL*/
+
+/*SLIDESHOW*/
+*{box-sizing:border-box}
+
+/*slideshow container*/
+.slideshow-container{
+    max-height: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+/*hides images*/
+.mySlides {
+    display: none;
+}
+
+/*next and previous buttons*/
+.prev, .next{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/*positions next button on the right*/
+.next{
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/*color and opacity on hover*/
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+/*style for caption text*/
+.text{
+    color:azure;
     font-size: 15px;
+    padding: 20px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align:center;
+}
+
+/*number text(1/3 etc)*/
+.numbertext {
+    color:azure;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* ... */
+.dot{
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+
+
+
+/*FOOTER*/
+.footer{
+    padding: 20px;
+    text-align: right;
+    font-family: courier;
+    color:aliceblue;
+    background: #846f79;
+    border-style: outset;
+}
+
+
+/*Gallery~~~~~~~*/
+div.gallery {
+    margin: 5px;   
+    float: left;
+    width: 180px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: gabriola;
+}
+
+div.gallery:hover {
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+    opacity: 0.5;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+div.gallery img:hover{
+    opacity: 1;
+}
+
+div.desc {
+    padding: 15px;
     text-align: center;
 }
+
+* {box-sizing:border-box}
+/*Gallery~~~~~~~~*/
+
 
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   width: 50%;
 }
+
+/*responsive layout*/
+    @media screen and (max-width: 700px) {
+        .row{flex-direction:column;}
+    }
+        
+    @media screen and (max-width: 400px) {
+        .navbar a{
+            float: none;
+            width: 100%;}
+    }
