--- a/demo/style.css
+++ b/demo/style.css
@@ -2,33 +2,56 @@ body{
     background-color: #efbdd8;
 }
 .header{
-    padding:50px;
-    font-family: palatino;
-    text-align: center;
-    background-image: linear-gradient(to bottom right, #6f3755, #e977af);
-    color: white;
-    font-size: 55px;
+    padding:5px;
+    background-image: linear-gradient(to bottom right, #3F9A6C, #86CBA0, #D5ECDE);
     border-style: outset;
     border-width: 5px;
-    border-color: #84556b;
-    text-shadow: 2px 2px 5px black;
+    border-color: #5A8A6E;
+    
 }
 
-h1{font-family: arial black;
+#headText{
+    font-family: "Lucida Handwriting";
     text-align: center;
-    color:deepskyblue;
-    font-size: 50px;
+    color: white;
+    font-size: 70px;
     text-shadow: 2px 2px 5px black;
+    line-height: 50px
+    
 }
 
-h2{font-family: arial;
+#text1{font-family: "Garamond";
+    text-align: center;
+    color: #3F9A6C;
+    font-size: 60px;
+    font-variant: small-caps;
+    text-shadow: 2px 2px 5px black;
+    line-height: 1px;
+}
+
+#text2{font-family: "Helvetica";
     text-align:justify;
     color:white;
-    font-size: 20px;
+    font-size: 18px;
+    text-indent: 50px;
 }
+    
 
 .image{
-    height: 465px;
+    height: 340px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.image2{
+    height: 464px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.imageLink{
+    height: 320px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -36,10 +59,10 @@ h2{font-family: arial;
 /*NAVBAR~~~~~*/
 .navbar{
     overflow: hidden;
-    background-color: #9d6160;
+    background-color: #9B406D;
     border-style: outset;
-    border-color: #ac7976;
-    font-family: helvetica;
+    border-color: #725561;
+    font-family: "helvetica";
     font-variant:small-caps;
     text-shadow: 2px 2px 5px black;
 }
@@ -57,8 +80,8 @@ h2{font-family: arial;
 }
 
 .navbar a:hover{
-    background-color: #ddd;
-    color: black;
+    background-color: #86CBA0;
+    color: white;
 }
 /*NAVBAR*/
 
@@ -77,7 +100,10 @@ h2{font-family: arial;
     background-color: #e977af;
     border-style: outset;
     border-color: #ec91bd;
-    padding: 50px;
+    padding-top: 10px;
+    padding-right:30px;
+    padding-left: 30px;
+    padding-bottom: 10x;
     overflow: auto;
 }
 /*sidebar*/
@@ -87,144 +113,56 @@ h2{font-family: arial;
     overflow:auto;
     flex:70%;
     background-color: #efbdd8;
-    padding: 20px;
+    padding-top: 10px;
+    padding-right:30px;
+    padding-left: 30px;
+    padding-bottom: 10x;
     align-content: justify;
 }
 /*main column*/
 
-/*SCROLL*/
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #846f79; 
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #6f3755; 
-}
-/*SCROLL*/
-
-/*SLIDESHOW*/
-*{box-sizing:border-box}
-
-/*slideshow container*/
-.slideshow-container{
-    max-height: 1000px;
-    position: relative;
-    margin: auto;
-}
-
-/*hides images*/
-.mySlides {
-    display: none;
-}
-
-/*next and previous buttons*/
-.prev, .next{
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
+a:link{
+    color:white;
+    text-decoration:none;
+    font-family: "helvetica";
     font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
+    
 }
 
-/*positions next button on the right*/
-.next{
-    right: 0;
-    border-radius: 3px 0 0 3px;
+a:visited{
+    color:floralwhite;
+    text-decoration: none;
+    font-family: "helvetica";
+    font-size: 18px;
 }
 
-/*color and opacity on hover*/
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
+a:hover{
+    color: #3F9A6C;
+    text-decoration: none;
+    font-family: "helvetica";
+    font-size: 18px;
 }
 
-/*style for caption text*/
-.text{
-    color:azure;
-    font-size: 15px;
-    padding: 20px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align:center;
-}
-
-/*number text(1/3 etc)*/
-.numbertext {
-    color:azure;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* ... */
-.dot{
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-    background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
-
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
-
-
-
-
-/*FOOTER*/
-.footer{
-    padding: 20px;
-    text-align: right;
-    font-family: courier;
-    color:aliceblue;
-    background: #846f79;
-    border-style: outset;
+a:active{
+    color: #e977af;
+    text-decoration: none;
+    font-family: "helvetica";
+    font-size: 18px;
 }
 
 
 /*Gallery~~~~~~~*/
+#wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 470px;
+}
+
+div.projects{
+    text-align: center;
+}
+
 div.gallery {
     margin: 5px;   
     float: left;
@@ -242,19 +180,19 @@ div.gallery:hover {
 div.gallery img {
     width: 100%;
     height: auto;
-    opacity: 0.5;
     background-color: white;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 div.gallery img:hover{
-    opacity: 1;
+    opacity: 0.5;
 }
 
 div.desc {
     padding: 15px;
     text-align: center;
 }
+
 
 * {box-sizing:border-box}
 /*Gallery~~~~~~~~*/
